Fixed the swatch size on mobile

--- a/src/styles/pages/_pdp.scss
+++ b/src/styles/pages/_pdp.scss
@@ -176,6 +176,12 @@
         &__swatches {
             display: flex;
             margin-top: 30px;
+            // background-color: red;
+            @media(max-width: 768px) {
+                display: grid;
+                grid-template-columns: repeat(2, 1fr);
+                grid-gap: 15px;
+            }
             
             &__item {
                 font-size: 14px;
@@ -186,6 +192,11 @@
                 margin-right: 15px;
                 border: 1px solid #cccccc;
                 cursor: pointer;
+
+                @media(max-width: 768px) {
+                    width: 100%;
+
+                }
                 
                 &.active {
                     font-weight: bold;
